[package]
name = "zk-paillier"
version = "0.4.4"
edition = "2018"
description = "Collection of Paillier cryptosystem zero knowledge proofs written in Rust"
license = "GPL-3.0-or-later"
repository = "https://github.com/ZenGo-X/zk-paillier"
categories = ["cryptography", "algorithms"]
keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoagorithms"]

authors = [
    "Gary <gary@kzencorp.com>",
    "Morten Dahl <mortendahlcs@gmail.com>",
    "Omer <omer.shlomovits@gmail.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.1"
bit-vec = "0.6"
sha2 = "0.9"
digest = "0.9"
thiserror = "1"

[dependencies.curv-kzen]
version = "0.10"
git="https://github.com/Gimmi7/curv-cy"
rev="6fd33a919a2e03805b488e6b23a5eeae621b93d0"

[dependencies.paillier]
package = "kzen-paillier"
version = "0.4.3"
git = "https://github.com/Gimmi7/rust-paillier-cy"
rev = "939aeba2d33b0f7c56e6b11c6362fe7db99dff81"

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "all"
harness = false

